fixed spacing

--- a/client/src/Components/Homepage.css
+++ b/client/src/Components/Homepage.css
@@ -424,21 +424,15 @@ h1{
     text-align: justify;
 }
 
-/* NearlyEnd */
 .nearlyEnd {
     width: 100%;
-    padding:40px;
-    /* background-image: linear-gradient(#143ebe, #143ebe); */
     background-image: linear-gradient(#e54726, #e54726);
     text-align: center;
 }
 
 .nearlyEnd p {
     text-align: right;
-    margin-top: -20px;
-    margin-right: 100px;
     font-weight: 600;
-    /* text-decoration:; */
 }
 
 .end {
@@ -455,11 +449,10 @@ h1{
 .header {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;   /* Align children to the top */
+    justify-content: flex-start; 
     min-height: 100vh;
     width:100%;
     width: 100%;
-    /* background-image: url('../assets/images/Untitled-1\ copy.jpg'); */
     background-position: center;
     background-size:cover;
     background-size: cover;
